objects/ssot__CourseOfferingScheduleTmpl__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EndTime__c</fullName>
        <label>EndTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Course Offering Schedule Template Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsOfferedOnFriday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOfferedOnFriday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsOfferedOnMonday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOfferedOnMonday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsOfferedOnSaturday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOfferedOnSaturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsOfferedOnSunday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOfferedOnSunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsOfferedOnThursday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOfferedOnThursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsOfferedOnTuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOfferedOnTuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsOfferedOnWednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOfferedOnWednesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecurrencePattern__c</fullName>
        <label>Recurrence Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__StartTime__c</fullName>
        <label>StartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>